# plasma5support

./: .kde-ci.yml  CMakeLists.txt  KF5Plasma5SupportConfig.cmake.in  KF5Plasma5SupportMacros.cmake  KF6Plasma5SupportConfig.cmake.in  KF6Plasma5SupportMacros.cmake  Plasma5SupportConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  pluginloadertest.cpp  pluginloadertest.h
po/ar/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/ast/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/az/: plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/be/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/bg/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/bn/: plasma_engine_weather.po
po/bn_IN/: plasma_engine_weather.po
po/bs/: plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/ca/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/ca@valencia/: libplasma5support.po  plasma_engine_devicenotifications.po  plasma_engine_hotplug.po  plasma_engine_keystate.po  plasma_engine_powermanagement.po  plasma_engine_soliddevice.po  plasma_engine_time.po  plasma_engine_weather.po
po/cs/: libplasma5support.po  (+7 more)
src/: CMakeLists.txt  Messages.sh  config-X11.h.cmake
src/dataengines/: CMakeLists.txt
src/dataengines/activities/: CMakeLists.txt  activityengine.cpp  activityengine.h  activityjob.cpp  plasma-dataengine-activities.json
src/dataengines/applicationjobs/: CMakeLists.txt
src/dataengines/apps/: CMakeLists.txt  plasma-dataengine-apps.json
src/dataengines/clipboard/: CMakeLists.txt  org.kde.plasma.clipboard.operations
src/dataengines/devicenotifications/: CMakeLists.txt  devicenotifications.notifyrc  devicenotificationsengine.cpp  ksolidnotify.cpp  plasma-dataengine-devicenotifications.json
src/dataengines/executable/: CMakeLists.txt  plasma-dataengine-executable.json
src/dataengines/favicons/: CMakeLists.txt  plasma-dataengine-favicons.json
src/dataengines/filebrowser/: CMakeLists.txt  plasma-dataengine-filebrowser.json
src/dataengines/geolocation/: CMakeLists.txt  location_ip.cpp  plasma-dataengine-geolocation.json
src/dataengines/hotplug/: CMakeLists.txt  hotplugjob.cpp  plasma-dataengine-hotplug.json
src/dataengines/keystate/: CMakeLists.txt  keystate.cpp  plasma-dataengine-keystate.json
src/dataengines/mouse/: CMakeLists.txt  mouseengine.cpp  mouseengine.h  plasma-dataengine-mouse.json
src/dataengines/notifications/: CMakeLists.txt
src/dataengines/packagekit/: CMakeLists.txt  packagekitengine.cpp  packagekitjob.cpp  plasma-dataengine-packagekit.json
src/dataengines/places/: CMakeLists.txt  plasma-dataengine-places.json
src/dataengines/powermanagement/: CMakeLists.txt  plasma-dataengine-powermanagement.json  powermanagementengine.cpp  powermanagementjob.cpp
src/dataengines/soliddevice/: CMakeLists.txt  hddtemp.cpp  plasma-dataengine-soliddevice.json
src/dataengines/time/: CMakeLists.txt  plasma-dataengine-time.json
src/dataengines/weather/: CMakeLists.txt  plasma-dataengine-weather.json  weatherengine.cpp
src/dataengines/weather/ions/: CMakeLists.txt
src/dataengines/weather/ions/bbcukmet/: ion-bbcukmet.json  ion_bbcukmet.cpp
src/dataengines/weather/ions/dwd/: ion-dwd.json  ion_dwd.cpp
src/dataengines/weather/ions/envcan/: ion-envcan.json  ion_envcan.cpp
src/dataengines/weather/ions/noaa/: CMakeLists.txt  ion-noaa.json  ion_noaa.cpp
src/dataengines/weather/ions/wetter.com/: ion-wettercom.json  ion_wettercom.cpp
src/declarativeimports/: CMakeLists.txt  Mainpage.dox  datamodel.cpp  datamodel.h  datasource.cpp  datasource.h  plasma5supportplugin.cpp  plasma5supportplugin.h  qmldir  serviceoperationstatus.cpp  serviceoperationstatus.h  types.h
src/declarativeimports/core/: datamodel.cpp  datamodel.h  datasource.cpp  datasource.h  serviceoperationstatus.h
src/plasma/: CMakeLists.txt  Mainpage.dox  datacontainer.h  dataengine.cpp  dataengine.h  dataengineconsumer.cpp  dataengineconsumer.h  plasma.cpp  plasma5support.cpp  plasma5support.h  pluginloader.cpp  pluginloader.h  service.cpp  service.h  servicejob.h  version.cpp  version.h
src/plasma/private/: datacontainer_p.h  dataengine_p.h  dataengineconsumer_p.h  dataenginemanager.cpp  dataenginemanager_p.h  service_p.h  servicejob_p.h  storage.cpp  storage_p.h  storagethread_p.h
src/plasma5support/: CMakeLists.txt  Mainpage.dox  config-plasma5support.h.cmake  datacontainer.cpp  datacontainer.h  dataengine.cpp  dataengine.h  dataengineconsumer.cpp  dataengineconsumer.h  plasma5support.cpp  plasma5support.h  pluginloader.cpp  pluginloader.h  service.cpp  service.h  servicejob.cpp  servicejob.h  version.cpp  version.h
src/plasma5support/data/servicetypes/: plasma-service.desktop  plasma5support-dataengine.desktop  plasma5support-service.desktop
src/plasma5support/private/: datacontainer_p.cpp  datacontainer_p.h  dataengine_p.h  dataengineconsumer_p.h  dataenginemanager.cpp  dataenginemanager_p.h  service_p.h  storage.cpp  storage_p.h  storagethread.cpp
tools/: migratedataengines.sh
(+420 files in other folders)
